--- a/skeleton-web/src/main/resources/config.properties
+++ b/skeleton-web/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 db.url=${db.url}
 db.password=${db.password}
 db.username=${db.username}
-redis.host=${db.redis}
+redis.host=${redis.host}
 redis.port=${redis.port}
 redis.db=${redis.db}
