--- a/skeleton-web/pom.xml
+++ b/skeleton-web/pom.xml
@@ -46,6 +46,16 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <profiles>
