--- a/skeleton-web/src/main/webapp/WEB-INF/web.xml
+++ b/skeleton-web/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:*/spring/spring-core.xml</param-value>
+    <param-value>classpath*:spring/spring-core.xml</param-value>
     <!-- 默认是/WEB-INF/applicationContext.xml -->
   </context-param>
 
